--- a/platformio.ini
+++ b/platformio.ini
@@ -1,67 +1,44 @@
-;PlatformIO template configuration file for megaTinyCore
-; https://github.com/SpenceKonde/megaTinyCore/
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
-;   Hardware options: oscillator type, BOD, EEPROM retain
-;   Upload options: custom upload port, speed, and extra flags
+;   Upload options: custom upload port, speed and extra flags
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
 ;
-; Please visit documentation for the other options
-; https://github.com/SpenceKonde/megaTinyCore/blob/master/PlatformIO.md
+; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-; https://docs.platformio.org/en/latest/platforms/atmelmegaavr.html
 
 [platformio]
-; Default build target
 default_envs = Upload_UPDI
+;default_envs = set_fuses
 
-; Parameters used for all environments
 [env]
 platform = atmelmegaavr
 framework = arduino
 
-;lib_deps = lowpowerlab/RFM69@^1.5.2
-
-; Chip in use
 board = ATtiny3216
-; Clock frequency in [Hz]
-board_build.f_cpu = 4000000L
-; Oscillator type (internal or external)
+board_build.f_cpu = 8000000L
 board_hardware.oscillator = internal
-
-; Unflag build flags
-build_unflags =
-
-; Extra build flags
+;build_unflags = -DMILLIS_USE_TIMERD0
 build_flags = 
-    -lprintf_flt 
-    -DSERIAL_RX_BUFFER_SIZE=128 
-    -DSERIAL_TX_BUFFER_SIZE=128
+	-lprintf_flt
+	-DSERIAL_RX_BUFFER_SIZE=128
+	-DSERIAL_TX_BUFFER_SIZE=128
+	-std=c++22
+;	-DMILLIS_USE_TIMERNONE
 
-; Monitor port is auto detected. Override here
-;monitor_port =
-; Serial monitor baud rate
 monitor_speed = 115200
+lib_deps = 
+	https://github.com/adafruit/Adafruit_SSD1306.git
 
-
-; Run the following command to upload with this environment
-; pio run -e Upload_UPDI -t upload
 [env:Upload_UPDI]
-; Upload protocol for UPDI upload
 upload_protocol = serialupdi
 upload_port = COM6
-upload_flags =
+upload_flags = 
 
-
-; run the following command to set fuses
-; pio run -t fuses -e set_fuses
 [env:set_fuses]
-; Upload protocol for used to set fuses
 upload_protocol = ${env:Upload_UPDI.upload_protocol}
-upload_flags =
-
-; Hardware settings
+upload_flags = 
 board_hardware.bod = 2.7v
 board_hardware.eesave = yes
 board_hardware.updipin = updi
