--- a/platformio.ini
+++ b/platformio.ini
@@ -25,11 +25,12 @@ build_flags =
 	-DSERIAL_RX_BUFFER_SIZE=128
 	-DSERIAL_TX_BUFFER_SIZE=128
 	-std=c++22
+	-DEXTERN_5x7_FONT
 ;	-DMILLIS_USE_TIMERNONE
 
 monitor_speed = 115200
-lib_deps = 
-	https://github.com/adafruit/Adafruit_SSD1306.git
+;lib_deps = 
+;	https://github.com/adafruit/Adafruit_BusIO.git
 
 [env:Upload_UPDI]
 upload_protocol = serialupdi
